ボルツマンの公式の章導入

--- a/note.tex
+++ b/note.tex
@@ -103,10 +103,6 @@
 \begin{document}
 \maketitle
 
-{
-\setcounter{tocdepth}{2}
-\tableofcontents
-}
 \newpage
 
 \hypertarget{ux5b64ux7acbux3057ux305fux5358ux7d14ux306aux53e4ux5178ux7cfbux306eux7d71ux8a08ux529bux5b66}{%
@@ -117,9 +113,13 @@
 
 古典系の統計力学では、以下の2つを念頭に置く。
 
-\textbf{古典系}\(\cdots\)その系の(途方も無い)自由度のぶんだけの一般化運動量と一般化座標の次元をもつ\textbf{相空間}があれば、その上の1点は必ず系のひとつのミクロ状態を記述している。
-
-\textbf{熱力学の平衡状態}\(\cdots\)エントロピーとその自然な変数で張られる(ミクロ系よりは)ごく少ない自由度の\textbf{相空間}上の一点を使ってその系の平衡状態を指定できる
+\begin{description}
+\tightlist
+\item[\textbf{ミクロな状態}]
+その系の(途方も無い)自由度のぶんだけの一般化運動量と一般化座標の次元をもつ\textbf{相空間}があれば、その上の1点は必ず系のひとつのミクロ状態を記述している。
+\item[\textbf{マクロな状態}]
+エントロピーとその自然な変数で張られる(ミクロ系よりは)ごく少ない自由度の\textbf{相空間}上の一点を使ってその系の平衡状態を指定できる
+\end{description}
 
 \begin{figure}
 \hypertarget{fig:micro_macro}{%
@@ -129,13 +129,53 @@
 }
 \end{figure}
 
-熱力学的な観測による｢平衡状態においては、見かけ上変化はない｣｢マクロな変化がない限り、平衡状態は平衡状態のままである｣という経験事実は、
-FIG.~\ref{fig:micro_macro}のマクロ状態で指定した状態が平衡状態の場合、右側の｢ミクロ状態｣がそれぞれ等確率で実現されるとしたら、
-\textbf{ほぼ全て}が平衡状態に対応するということを意味する。逆説的にいえば、マクロな視点で見ているからこそ、
-ミクロな状態一つ一つを区別して扱うということができず、それらをまとめて平衡状態として扱い、そのために統計的な見方が必要になったとも言えるのかも。
-このようなミクロ状態たちを\textbf{ミクロカノニカル集団}とよぶ。
-ここでいう\textbf{ほぼすべて}は、以下の極限で確率100\%になる。
+FIG.~\ref{fig:micro_macro}のマクロ状態で指定した状態が平衡状態の場合、左側の｢ミクロ状態｣から任意のものを一つ選び出してきたとき、取り出された状態の\textbf{ほぼ全て}が区別できず、同じ平衡状態に対応するとしよう。これは統計力学の要請のもっとも基本的なものの一つである。
 
-\textbf{熱力学極限}\(\cdots\)エントロピーの自然な変数の\textbf{密度}を一定にしながら、体積をあらゆる方向に一樣に大きくしていって無限大にする極限のこと
+この操作で選び出す母集団となったミクロ状態たちを\textbf{ミクロカノニカル集団}とよぶ。
+
+ここでいう\textbf{ほぼ全て}は、以下の極限で確率100\%になるとする。
+
+\begin{description}
+\tightlist
+\item[熱力学極限]
+エントロピーの自然な変数の\textbf{密度}を一定にしながら、体積をあらゆる方向に一樣に大きくしていって無限大にする極限のこと
+\end{description}
+
+ミクロカノニカル集団の要素それぞれの実現確率を等しく与えた確率分布のことを\textbf{ミクロカノニカル分布}とよぶ。先ほどの要請と合わせると、ミクロカノニカル分布は平衡状態とマクロにみて同じ状態を実現する。
+
+これを等重率の原理として採用する。 これによれば、
+
+\begin{itemize}
+\tightlist
+\item
+  マクロな変化がない限り、平衡状態は平衡状態のままである
+\item
+  殆どの場合、孤立した単純系は平衡状態にやがて落ち着く
+\end{itemize}
+
+というマクロな観測は以下のように説明される。
+
+｢ミクロな状態は平衡状態でも時間発展している。その時間発展とはミクロカノニカル集団のうちのある要素から別の要素に移ることにほかならないが、非平衡状態からそれを繰り返せば圧倒的大多数であるところの平衡状態にたどり着く。十分マクロな系では、一度平衡状態になったときに次の状態が非平衡状態になる確率はゼロである。｣
+
+非常に普遍的な事実をこのように自然な形で説明できるというのがこの原理を採用する理論のよいところである。
+等重率の｢原理｣は自然界が厳密に従う原理というわけではなく、理論で公理的に採用して自然現象を理解しようという意味での原理である。そして、仮説であるところのこの公理からマクロな物理量を計算したときに、確率的なゆらぎが小さければ検証が可能である。
+
+\hypertarget{ux30a8ux30f3ux30c8ux30edux30d4ux30fcux3092ux30dfux30afux30edux306aux8996ux70b9ux304bux3089ux8a08ux7b97ux3067ux304dux308bux304b}{%
+\subsection{エントロピーをミクロな視点から計算できるか?}\label{ux30a8ux30f3ux30c8ux30edux30d4ux30fcux3092ux30dfux30afux30edux306aux8996ux70b9ux304bux3089ux8a08ux7b97ux3067ux304dux308bux304b}}
+
+熱力学は、ミクロな物理量から直接には定めることができない、\textbf{純熱力学変数}が含まれている。
+等重率の原理は、ミクロな物理量がマクロな物理量として現れてくるときに平均が使えることを教えてくれるから、力学変数についてはマクロなスケールでも知ることができる。
+ここでは純熱力学変数をマクロな物理学に整合するように、等重率の原理とミクロな物理学を用いてエントロピーを求める方法がないか推測する。
+もし正しく求められるものがあれば、それを要請として統計力学を構築すれば良い。
+
+等重率の原理が教えてくれるのはミクロなエネルギーの分布であるから、エネルギーとエントロピーとの関係を考えてみよう。
+熱力学から得られる知見として、
+
+\begin{quote}
+熱の交換が可能な2つの単純系からなる複合系が平衡状態に達しているとき、
+それらの単純系のエントロピーのエネルギーに共役な示強変数(\textbf{逆温度})の値は一致する
+\end{quote}
+
+というものがある。
 
 \end{document}
