--- a/note.tex
+++ b/note.tex
@@ -57,7 +57,7 @@
 \setlength{\emergencystretch}{3em} % prevent overfull lines
 \providecommand{\tightlist}{%
   \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
-\setcounter{secnumdepth}{5}
+\setcounter{secnumdepth}{-\maxdimen} % remove section numbering
 \makeatletter
 \@ifpackageloaded{subfig}{}{\usepackage{subfig}}
 \@ifpackageloaded{caption}{}{\usepackage{caption}}
@@ -103,8 +103,10 @@
 \begin{document}
 \maketitle
 
-\newpage
-
+{
+\setcounter{tocdepth}{3}
+\tableofcontents
+}
 \hypertarget{ux5b64ux7acbux3057ux305fux5358ux7d14ux306aux53e4ux5178ux7cfbux306eux7d71ux8a08ux529bux5b66}{%
 \section{孤立した単純な古典系の統計力学}\label{ux5b64ux7acbux3057ux305fux5358ux7d14ux306aux53e4ux5178ux7cfbux306eux7d71ux8a08ux529bux5b66}}
 
@@ -176,6 +178,65 @@ FIG.~\ref{fig:micro_macro}のマクロ状態で指定した状態が平衡状態
 それらの単純系のエントロピーのエネルギーに共役な示強変数(\textbf{逆温度})の値は一致する
 \end{quote}
 
-というものがある。
+というものがある。 すなわち、
+
+\begin{equation}\protect\hypertarget{eq:inverse-temperature}{}{
+\frac{\partial}{\partial E^{(1)}}S^{(1)}(E^{(1)})=\frac{\partial}{\partial E^{(2)}}S^{(2)}(E^{(2)})
+}\label{eq:inverse-temperature}\end{equation} である。
+平衡状態についての記述は別にエネルギーに共役な物に限らずあらゆる示強変数について言えるだろうが、
+以下では等重率の原理が直接に決めるエネルギーに関する平衡条件だけを考えるので、逆温度についてのこの関係を使っていこう。
+
+ここでミクロカノニカル分布をしているのは単純系に限っていたことに気づく。
+では逆に考えて、単純系を全く無意味な壁で区切って部分系(1)と部分系(2)からなる複合系とみなせば良いのである。
+そうすれば、単純系の中で逆温度の等式が利用できる。
+
+部分系がそれぞれ十分に大きく、先程の｢無意味な壁｣のあたりで起きる系間の相互作用が無視できるほどであれば、それぞれの部分系が孤立しているときの状態数の積で全系の状態数が表せるはずだ。
+すなわち、エネルギーEのときのミクロカノニカル分布で与えられる系の状態数を\(W(E)\)で表して
+\[
+W(E)=\sum_{E^{(1)}}W^{(1)}(E^{(1)})W^{(2)}(E-E^{(1)})
+\]
+
+この関係式は、粒子間の相互作用には短距離力しか効かない(長距離秩序がない?)という仮定のもとでよく成り立つと期待されるが、
+厳密に成り立っているかどうかよりもこれを使って熱力学的要請を満たすエントロピーを表現できるかどうかが肝である。
+等重率の原理によれば、\(W(E)\)が特定の値\(E^{(1)}\)を持っている確率\(\Theta^{(1)}(E^{(1)})\)は
+\begin{equation}\protect\hypertarget{eq:E1probability}{}{
+\Theta^{(1)}(E^{(1)}) = \frac{W^{(1)}(E^{(1)})W^{(2)}(E-E^{(1)})}{W(E)}
+}\label{eq:E1probability}\end{equation} である。
+
+所与の物理量を満たす状態のうちでもっともありふれた状態が平衡状態である、ということは逆に、
+確率が最も高い状態を作り出す物理量がその物理量の平衡値である、といえる。
+したがって、eq.~\ref{eq:E1probability}において与えられた\(E\)のもとで\(\Theta^{(1)}(E^{(1)})\)、\(\Theta^{(2)}(E^{(2)})\)をともに最大にするような\(E_1, E_2\)を求めると、この複合系のエネルギーの平衡値が求められることになる。
+
+関数の最大値は微分によって求められるのだから、
+\begin{equation}\protect\hypertarget{eq:equilibrium-value-of-E}{}{
+\frac{\partial}{\partial E^{(1)}}\ln{W^{(1)}}(E^{(1)})=\frac{\partial}{\partial E^{(2)}}\ln{W^{(2)}}(E^{(2)})
+}\label{eq:equilibrium-value-of-E}\end{equation}
+を計算すればよい。ここで、 \[
+\frac{\partial}{\partial E^{(1)}}\ln{W^{(2)}}(E-E^{(1)})=-\frac{\partial}{\partial E^{(2)}}\ln{W^{(2)}}(E^{(2)})
+\] を用いた(合成関数の微分と連鎖律)。
+
+eq.~\ref{eq:equilibrium-value-of-E}を熱力学からきたeq.~\ref{eq:inverse-temperature}と比較すれば、統計力学のエントロピーが満たすべき性質が見えてくる。
+まずざっくりと\(\ln{W}\)と\(S\)が対応していることはみればわかる。微分の形で対応しているということは、定数倍と定数和だけの自由度があってよく、
+\[
+S^{(i)} = (定数A)\times\ln W^{(i)}+(定数B)\quad(i=1, 2)
+\]
+のような関係性のはずだ。定数Bはエントロピーの原点をどこにとるか、という話だから、ゼロに選ぶのが自然だろう。定数Aには、単位系を熱力学に合わせるべく、
+\[
+k_B\approxeq1.38\times10^{-23} \text{J/K}
+\]
+とする。これを\textbf{ボルツマン定数}と呼ぶ。理論物理では\(k_B=1\)として単位系を構成することもある。
+ここまでで、分割した系の独立性や平衡値が\(E^{(1)}\)、\(E^{(2)}\)とゆらぎが十分小さいとみなせる範囲で決まることなど、
+十分系のサイズが大きいということを前提とした等式を利用してきたことに注意して、任意の単純系に拡張して書くと、
+
+\begin{description}
+\tightlist
+\item[ボルツマンの定理]
+エントロピーの自然な変数\(E, X_1, \cdots, X_t\)と書ける単純系では\(V\to\infty\)で熱力学のエントロピーに漸近する量
+\[
+S(E, X_1, \cdots, X_t) = k_B\ln{W(E, X_1, \cdots X_t)}+o(V)
+\] がある。
+\end{description}
+
+ここでオーダーの記号\(o(V)\)は、\(V\to\infty\)という極限で\(0\)になる項であることを表す。
 
 \end{document}
